@@ -184,6 +184,7 @@ S3method(predict, wa)
 S3method(residuals, bootstrap.mat)
 S3method(residuals, mat)
 S3method(residuals, pcr)
+S3method(residuals, prcurve)
 ## plotting
 S3method(caterpillarPlot, default)
 S3method(caterpillarPlot, data.frame)
